post: JDK21-Spring 系列大纲 + 前两篇文章（草稿）；feat: mermaid 图表渲染支持